--- a/src/index.css
+++ b/src/index.css
@@ -348,7 +348,7 @@ body {
 }
 
 .popup-restart {
-  /* display: none; */
+  /*  display: flex; */
   position: fixed;
   width: 100%;
   height: 100%;
