--- a/src/index.css
+++ b/src/index.css
@@ -348,13 +348,14 @@ body {
 }
 
 .popup-restart {
-  /*  display: flex; */
+  /* display: none; */
   position: fixed;
   width: 100%;
   height: 100%;
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.6);
+  top: 0px;
 }
 
 .popup-container {
