--- a/src/index.css
+++ b/src/index.css
@@ -331,7 +331,9 @@ body {
 /* Popup */
 
 .popup {
-  /* display: none; */
+  top: 0;
+  display: flex;
+  align-items: center;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -433,4 +435,8 @@ body {
 
 .winning-cell {
   background-color: #118c87;
+}
+
+.flex {
+  display: flex;
 }
